--- a/app/src/main/res/layout/tollbar_layout.xml
+++ b/app/src/main/res/layout/tollbar_layout.xml
@@ -6,5 +6,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:titleTextColor="@color/white"
-    android:background="@color/COLOR"
+    android:background="@color/appBar"
     android:minHeight="?attr/actionBarSize" />
