--- a/app/src/main/res/layout/activity_userlogin.xml
+++ b/app/src/main/res/layout/activity_userlogin.xml
@@ -13,6 +13,13 @@
         android:orientation="vertical"
         android:padding="35dp">
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_undraw_reading"
+            android:paddingBottom="26dp"
+            />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/college_app"
             android:layout_width="match_parent"
