--- a/app/src/main/res/layout/my_class_item.xml
+++ b/app/src/main/res/layout/my_class_item.xml
@@ -30,6 +30,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_marginTop="10dp"
             android:id="@+id/rel_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
