--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="COLOR">#0091EA</color>
+    <color name="appBar">#0091EA</color>
     <color name="colorPrimary">#0091EA</color>
     <color name="colorAccent">#D88520</color>
     <color name="white">#fff</color>
-    <color name="Black">#000</color>
+    <color name="Black">#303030</color>
+    <color name="Black_light">#606060</color>
     <color name="light_color">#EBECF1</color>
     <color name="colorLight">#00B0FF</color>
     <color name="Red">#D50000</color>
     <color name="LightGrey">#ECEFF1</color>
     <color name="txt_bg_admin">#EFF2F4</color>
     <color name="video_bg">#FFFFFF</color>
+    <color name="todo_card">#FAFAFA</color>
 </resources>
